--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,7 @@
 
   "mounts": [
     {
-      "source": "/run/user/1000/docker.sock",
+      "source": "${localEnv:DOCKER_SOCK}",
       "target": "/var/run/docker.sock",
       "type": "bind"
     }
